--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DB_CONNECT = mongodb+srv://tbd-faruk:Faruk143@cluster0.bml0x.mongodb.net/?retryWrites=true&w=majority
 TOKEN_KEY = Technobd
+PORT = 3000
